# mobile-llm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  INVARIANTS.md  LAUNCH_KIT.md  LICENSE  Makefile  README.md  TRAINING_GUIDE.md  USAGE.md  a.out  agent.hpp  cmake_install.cmake  download_model.sh  fast_math.f90  gguf_parser.hpp  llama_adapter.hpp  main.cpp  mobile_llm  mobile_llm_tests  native_linear_llm.hpp  native_mamba_llm.hpp  native_transformer_llm.hpp  patch_agent.py  request_llama.py  test_parse.cpp  test_regex.cpp  test_tokenizer_compilation.cpp  test_vocab.json  tests.cpp  tokenizer.hpp  turboquant.hpp
.github/workflows/: cmake.yml
scripts/: chat.sh
